# glance

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.md  demo.tape  gif.sh  test.md
.github/workflows/: ci.yml  release.yml
css/: github.css
editors/nvim/lua/glance/: init.lua
editors/nvim/plugin/: glance.lua
src/: daemon.rs  ipc.rs  main.rs  render.rs  tui.rs  watch.rs
