[package]
name = "glance"
version = "0.1.0"
edition = "2024"
description = "Markdown preview daemon with editor integration"
license = "MIT"
repository = "https://github.com/gabriele/glance"

[dependencies]
wry = "0.54"
tao = "0.33"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
directories = "6"
clap = { version = "4", features = ["derive"] }
termimad = "0.31"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "glance"
path = "src/main.rs"
