[package]
name = "glance-md"
version = "0.2.0"
edition = "2024"
description = "Markdown preview that scrolls with your cursor. Terminal-first, editor-optional."
license = "MIT"
readme = "README.md"
repository = "https://github.com/gabep7/glance"
keywords = ["markdown", "preview", "terminal", "neovim", "cli"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
wry = "0.54"
tao = "0.33"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
directories = "6"
clap = { version = "4", features = ["derive"] }
termimad = "0.31"
libc = "0.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "glance"
path = "src/main.rs"
