[package]
name = "glance-md"
version = "0.2.0"
edition = "2024"
description = "markdown preview for neovim"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gabep7/glance"
keywords = ["markdown", "preview", "terminal", "neovim"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
notify = { version = "7", features = ["macos_fsevent"] }
clap = { version = "4", features = ["derive"] }
termimad = "0.31"
libc = "0.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "glance"
path = "src/main.rs"